--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,23 @@
  *= require_tree .
  *= require_self
  */
+
+p {
+  margin-top: 40px;
+}
+
+a {
+  /* margin-top: 80px; */
+}
+
+ .your-question {
+  border-left: 5px solid rgb(177, 175, 175);
+  padding: 20px;
+ }
+
+ .coach-response {
+  background-color: #fff3cd;
+  border-left: 5px solid rgb(177, 175, 175);
+  padding: 20px;
+  margin-bottom: 40px;
+ }
